css/style.css
/* ... */
@media (min-width: 454px) {
  .xmd\:flex {
    display: flex;
  }

  .xmd\:h-\[375px\] {
    height: 375px;
  }

  .xmd\:flex-row {
    flex-direction: row;
  }

  .xmd\:justify-between {
    justify-content: space-between;
  }

  .xmd\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0px * var(--tw-space-y-reverse));
  }

  .xmd\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .xmd\:py-4 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .xmd\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 640px) {
  .sm\:grid {
    display: grid;
  }

  .sm\:h-\[270px\] {
    height: 270px;
  }

  .sm\:max-w-2xl {
    max-width: 42rem;
  }

  .sm\:gap-4 {
    gap: 1rem;
  }

  .sm\:border-4 {
    border-width: 4px;
  }

  .sm\:p-4 {
    padding: 1rem;
  }

  .sm\:px-4 {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .sm\:px-10 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }

  .sm\:font-serif {
    font-family: Poppins, sans-serif;
  }

  .sm\:text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  .sm\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .sm\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 768px) {
  .md\:mr-6 {
    margin-right: 1.5rem;
  }

  .md\:ml-0 {
    margin-left: 0px;
  }

  .md\:flex {
    display: flex;
  }

  .md\:h-7 {
    height: 1.75rem;
  }

  .md\:h-\[188px\] {
    height: 188px;
  }

  .md\:w-7 {
    width: 1.75rem;
  }

  .md\:w-36 {
    width: 9rem;
  }

  .md\:w-full {
    width: 100%;
  }

  .md\:max-w-\[100px\] {
    max-width: 100px;
  }

  .md\:max-w-5xl {
    max-width: 64rem;
  }

  .md\:flex-wrap {
    flex-wrap: wrap;
  }

  .md\:items-center {
    align-items: center;
  }

  .md\:justify-end {
    justify-content: flex-end;
  }

  .md\:justify-center {
    justify-content: center;
  }

  .md\:justify-around {
    justify-content: space-around;
  }

  .md\:gap-y-5 {
    row-gap: 1.25rem;
  }

  .md\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(5rem * var(--tw-space-x-reverse));
    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0px * var(--tw-space-y-reverse));
  }

  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:pr-1 {
    padding-right: 0.25rem;
  }

  .md\:hover\:border-emerald-700:hover {
    --tw-border-opacity: 1;
    border-color: rgb(4 120 87 / var(--tw-border-opacity));
  }

  .md\:hover\:text-emerald-600:hover {
    --tw-text-opacity: 1;
    color: rgb(5 150 105 / var(--tw-text-opacity));
  }

  .md\:hover\:shadow-lg:hover {
    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  }

  .group:hover .group-hover\:md\:ml-1 {
    margin-left: 0.25rem;
  }

  .group:hover .md\:group-hover\:inline-block {
    display: inline-block;
  }

  .group:hover .group-hover\:md\:w-\[119px\] {
    width: 119px;
  }

  .group:hover .group-hover\:md\:items-end {
    align-items: flex-end;
  }

  .group:hover .group-hover\:md\:bg-slate-100 {
    --tw-bg-opacity: 1;
    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
  }

  .group:hover .group-hover\:md\:p-2 {
    padding: 0.5rem;
  }

  .group:hover .group-hover\:md\:pr-2 {
    padding-right: 0.5rem;
  }
}

